cpp/test/FreezeScript/dbmap/fail/17_old.ice
[["suppress-warning:deprecated"]] // for class that implements interface

module Test
{

class C {}

struct S
{
    C m1;
}

}
